--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-http-backend": "^3.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-google-autocomplete": "^2.7.5",
     "react-i18next": "^16.5.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0"
